--- a/content/resources/15-665s14-th.md
+++ b/content/resources/15-665s14-th.md
@@ -5,7 +5,7 @@ description: 'Nineteenth century cartoon by William Charles that refers to Russi
   Depicted are John Bull, the Russian Bear, and Columbia holding the flag and liberty
   pole. "Bruin become Mediator or Negotiation for Peace." Image is in the public domain.
   Source: Wikimedia Commons.'
-file: /media/courses/15-665-power-and-negotiation-spring-2014/3472a96f0cd30505a8992e307f0a1e80_15-665s14-th.jpg
+file: /courses/15-665-power-and-negotiation-spring-2014/3472a96f0cd30505a8992e307f0a1e80_15-665s14-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Nineteenth century cartoon by William Charles that refers to Russia''s
@@ -23,3 +23,5 @@ resourcetype: Image
 title: 15-665s14-th.jpg
 uid: 3472a96f-0cd3-0505-a899-2e307f0a1e80
 ---
+Nineteenth century cartoon by William Charles that refers to Russia's effort to negotiate peace between America and Great Britain during the War of 1812. Depicted are John Bull, the Russian Bear, and Columbia holding the flag and liberty pole. "Bruin become Mediator or Negotiation for Peace." Image is in the public domain. Source: Wikimedia Commons.
+
