--- a/content/resources/15-665s14-th.md
+++ b/content/resources/15-665s14-th.md
@@ -18,10 +18,10 @@ image_metadata:
   image-alt: Redcoat clad John Bull kneels grasping the Bruin's right paw with both
     hands, as he reaches with his other toward Columbia's outstretched hand.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-665s14-th.jpg
 uid: 3472a96f-0cd3-0505-a899-2e307f0a1e80
 ---
 Nineteenth century cartoon by William Charles that refers to Russia's effort to negotiate peace between America and Great Britain during the War of 1812. Depicted are John Bull, the Russian Bear, and Columbia holding the flag and liberty pole. "Bruin become Mediator or Negotiation for Peace." Image is in the public domain. Source: Wikimedia Commons.
-
