--- a/content/resources/15-665s14.md
+++ b/content/resources/15-665s14.md
@@ -6,13 +6,15 @@ description: 'Nineteenth century cartoon by William Charles that refers to Russi
   pole. "Bruin become Mediator or Negotiation for Peace." Image is in the public domain.
   Source: Wikimedia Commons.'
 file: /courses/15-665-power-and-negotiation-spring-2014/e2206bcc6110c397925c9581805ad286_15-665s14.jpg
+file_size: 34703
 file_type: image/jpeg
 image_metadata:
   caption: 'Nineteenth century cartoon by William Charles that refers to Russia''s
     effort to negotiate peace between America and Great Britain during the War of
     1812. Depicted are John Bull, the Russian Bear, and Columbia holding a flag and
     liberty pole. ("Bruin become Mediator or Negotiation for Peace." Image is in the
-    public domain. Source: [Wikimedia Commons](http://commons.wikimedia.org/wiki/File:Bruin_become_Mediator_or_Negotiation_for_Peace.jpg).)'
+    public domain. Source: {{% resource_link "d9d76332-b93b-48ba-b350-18190c26864a"
+    "Wikimedia Commons" %}}.)'
   credit: '"Bruin become Mediator or Negotiation for Peace." Image is in the public
     domain. Source: Wikimedia Commons.'
   image-alt: Redcoat clad John Bull kneels grasping the Bruin's right paw with both
