--- a/content/resources/15-665s14.md
+++ b/content/resources/15-665s14.md
@@ -13,7 +13,8 @@ image_metadata:
     effort to negotiate peace between America and Great Britain during the War of
     1812. Depicted are John Bull, the Russian Bear, and Columbia holding a flag and
     liberty pole. ("Bruin become Mediator or Negotiation for Peace." Image is in the
-    public domain. Source: [Wikimedia Commons](http://commons.wikimedia.org/wiki/File:Bruin_become_Mediator_or_Negotiation_for_Peace.jpg).)'
+    public domain. Source: {{% resource_link "f068ed03-1d63-4d22-bf6b-66eb299ac88f"
+    "Wikimedia Commons" %}}.)'
   credit: '"Bruin become Mediator or Negotiation for Peace." Image is in the public
     domain. Source: Wikimedia Commons.'
   image-alt: Redcoat clad John Bull kneels grasping the Bruin's right paw with both
